<resources>
    <string name="base_url">http://grid.lenong365.com/api/</string>
    <string name="app_name">消防网格化</string>
    <string name="login_title">消防智慧网格化管理系统</string>
    <string name="user_name">请输入手机号码</string>
    <string name="password">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="message_login">短信登陆</string>
    <string name="forgot_password">忘记密码</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_name">姓 名</string>

    <string name="personal_phone">联系电话：</string>
    <string name="personal_id_card">身份证号：</string>
    <string name="personal_address">家庭住址：</string>

    <string name="personal_modify_info">修改个人信息</string>
    <string name="personal_modify_password">修改密码</string>
    <string name="personal_logout">退出登录</string>

    <string name="work_bar">工作进度</string>
    <string name="work_calendar">工作日历</string>
    <string name="work_schedule">工作进度表</string>

    <string name="grid_start">包括</string>
    <string name="grid_end">个子网格</string>

    <string name="title_activity_message_login">MessageLoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
