<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:id="@+id/temp_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="118dp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/temp_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="212dp"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textColor="@color/login_title"/>
    <TextView
        android:id="@+id/center_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/login_user_name_ed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/center_line"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:theme="@style/MyEditText"
        android:gravity="center"
        android:cursorVisible="false"
        android:textColorHint="@color/textGray"
        android:textSize="16sp"
        android:hint="@string/user_name"
       />

    <EditText
        android:id="@+id/login_password_ed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login_user_name_ed"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:theme="@style/MyEditText"
        android:textSize="16sp"
        android:hint="@string/password"
        android:gravity="center"
        android:cursorVisible="false"
        android:textColorHint="@color/textGray"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password_ed"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/login_button_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/login_use_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/message_login"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>