<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/personal_gray_bg">

        <ImageView
            android:id="@+id/temp_personal_bg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/personal_blue_bg"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"/>
        <TextView
            android:id="@+id/temp_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personal_portrait"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/portrait"
            android:layout_below="@+id/temp_personal_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"/>
        <TextView
            android:id="@+id/personal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/personal_portrait"
            android:layout_marginTop="20dp"
            android:text="@string/personal_name"
            android:textSize="22sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/temp_personal_info_layout"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_below="@id/temp_personal_bg"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_phone"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/personal_black_one"/>
                <TextView
                    android:id="@+id/personal_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/personal_black_two"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cut_off_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/idcard"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_id_card"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/personal_black_one"/>
                <TextView
                    android:id="@+id/personal_id_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/personal_black_two"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cut_off_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/address"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_address"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/personal_black_one"/>
                <TextView
                    android:id="@+id/personal_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/personal_black_two"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temp_personal_modify_info_layout"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_below="@id/temp_personal_info_layout"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/personal_info_modify"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:textColor="@color/personal_black_one"
                android:text="@string/personal_modify_info"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cut_off_line"/>
            <TextView
                android:id="@+id/personal_password_modify"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:textColor="@color/personal_black_one"
                android:text="@string/personal_modify_password"/>
        </LinearLayout>

        <TextView
            android:id="@+id/personal_logout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/temp_personal_modify_info_layout"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="80dp"
            android:background="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/personal_logout"
            android:gravity="center"
            android:textColor="#ff5959"
            android:textSize="18sp"/>
    </RelativeLayout>
</ScrollView>